# reeve

./: .dockerignore  .env.example  .gitignore  .gitmodules  BLOCKERS.md  CLAUDE.md  Cargo.toml  DECISIONS-MADE.md  README.md  REPORT.md  compose.dev.yml  compose.yml  justfile
crates/desired-state/: Cargo.toml
crates/desired-state/src/: lib.rs  render.rs
crates/desired-state/tests/: render.rs
crates/device-api/: Cargo.toml
crates/device-api/src/: device_token.rs  enroll.rs  identity.rs  lib.rs  status.rs
crates/e2e/src/: lib.rs
crates/e2e/tests/: chaos.rs  core_loop.rs  epoch_restore.rs  rotation.rs
crates/margo-package/: Cargo.toml
crates/margo-package/src/: lib.rs
crates/reeve/: Cargo.toml
crates/reeve-agent/: Cargo.toml
crates/reeve-agent/src/: bundle.rs  config.rs  converge.rs  enroll.rs  install.rs  lib.rs  main.rs  poll.rs  provider.rs  report.rs  source.rs  specdocs.rs  state.rs  systemd.rs  update.rs
crates/reeve-agent/src/ext/: channel.rs  health.rs  mod.rs  terminal.rs
crates/reeve-agent/tests/: chaos.rs  example_package.rs  poll_http.rs
crates/reeve-server/: Cargo.toml  build.rs
crates/reeve-server/src/: assets.rs  channels.rs  config.rs  db.rs  delivery.rs  deploy.rs  device_tokens.rs  devices.rs  enroll.rs  events.rs  groups.rs  history.rs  ingest.rs  init.rs  join_tokens.rs  keyfile.rs  lib.rs  main.rs  openapi.rs  ownership.rs  presence.rs  render.rs  router.rs  scope.rs  specdocs.rs  state.rs  tree.rs
crates/reeve-server/src/auth/: cidr.rs  mod.rs  routes.rs  sessions.rs  users.rs
crates/reeve-server/src/durability/: aead.rs  changeset.rs  mod.rs  restore.rs  snapshot.rs  target.rs  verify.rs
crates/reeve-server/src/ext/: channel.rs  federation.rs  mod.rs  rollouts.rs  secrets.rs  sse.rs  terminal.rs
crates/reeve-server/src/migrations/: V10__fleet_model.sql  V11__location_groups.sql  V1__auth.sql  V2__enrollment.sql  V5__durability.sql  V6__secrets.sql  V7__terminal.sql  V8__rollouts.sql
crates/reeve-server/tests/: auth_flow.rs  channel_flow.rs  delivery_flow.rs  devices_flow.rs  durability_chaos.rs  durability_flow.rs  enroll_flow.rs  federation_flow.rs  fleet_ops_flow.rs  groups_flow.rs  packaging_flow.rs  rollout_flow.rs  secrets_flow.rs  sse_flow.rs  status_flow.rs  terminal_flow.rs  tree_api.rs  zot_proxy_flow.rs
crates/reeve-server/tests/common/: mod.rs
crates/reeve-types/: Cargo.toml
crates/reeve-types/src/: lib.rs
crates/reeve-types/src/margo/: status.rs
crates/reeve-types/src/reeve/: capabilities.rs  channel.rs  enroll.rs  events.rs  health.rs  manifest.rs  mod.rs  secrets.rs  terminal.rs
crates/repo-store/: Cargo.toml
crates/revision-store/: Cargo.toml
crates/revision-store/src/: lib.rs
crates/revision-store/tests/: store.rs
docker/: agent.Dockerfile  server.Dockerfile
docs/: build-charter.md
docs/decisions/: deploy.md
scripts/: dev-down.sh  dev-up.sh
spec/reeve/: 08-packaging.md  11-fleet-model.md
spec/reeve-spec/: README.md
ui/: index.html  openapi.json  orval.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: app.tsx  index.css  main.tsx  route-tree.gen.ts
ui/src/api/endpoints/auth/: auth.ts
ui/src/api/endpoints/deploy/: deploy.ts
ui/src/api/endpoints/device/: device.ts
ui/src/api/endpoints/devices/: devices.ts
ui/src/api/endpoints/durability/: durability.ts
ui/src/api/endpoints/enroll/: enroll.ts
ui/src/api/endpoints/events/: events.ts
ui/src/api/endpoints/federation/: federation.ts
ui/src/api/endpoints/groups/: groups.ts
ui/src/api/endpoints/history/: history.ts
ui/src/api/endpoints/join-tokens/: join-tokens.ts
ui/src/api/endpoints/ops/: ops.ts
ui/src/api/endpoints/rollouts/: rollouts.ts
ui/src/api/endpoints/secrets/: secrets.ts
ui/src/api/endpoints/terminal/: terminal.ts
ui/src/api/endpoints/tree/: tree.ts
ui/src/api/model/: app-manifest-entry.ts  blame-entry.ts  bundle-ref.ts  cohort-spec-labels.ts  cohort-spec.ts  commit-response.ts  component-status.ts  create-group-request.ts  create-join-token-request-tags.ts  create-join-token-request.ts  create-request-tag-cohort.ts  create-request.ts  create-rollout-response.ts  create-tier-token-request.ts  created-join-token.ts  created-tier-token.ts  deploy-request.ts  deploy-response.ts  deployment-state.ts  deployment-status-event.ts  deployment-status-manifest.ts  deployment-status.ts  device-class.ts  device-component-state.ts  device-deployment-state.ts  device-detail.ts  device-presence-event.ts  device-status.ts  device-summary-labels.ts  device-summary-tags.ts  device-summary.ts  diff-entry.ts  disk-sample.ts  durability-lag-event.ts  durability-status-response.ts  durability-status.ts  enroll-request.ts  enroll-response.ts  error-body.ts  events-route-params.ts  (+92 more)
ui/src/components/: app-header.tsx  app-sidebar.tsx  confirm-button.tsx  copy-button.tsx  deploy-logs-viewer.tsx  deployment-detail-dialog.tsx  deployment-state-badge.tsx  device-form.tsx  device-terminal.tsx  group-form.tsx  journal-entry-item.tsx  location-fields.tsx  presence-badge.tsx  rollout-badges.tsx  scope-picker.tsx  search-select.tsx  secret-form.tsx
ui/src/components/ui/: native-select.tsx
ui/src/lib/: base64.ts  format.ts  groups.ts  scope.ts  sse.ts  tree.ts
ui/src/routes/: __root.tsx  _app.tsx  login.tsx  setup.tsx
ui/src/routes/_app/: index.tsx
ui/src/routes/_app/deploy/: index.tsx
ui/src/routes/_app/devices/: $device-id.tsx  index.tsx
ui/src/routes/_app/devices/$device-id/: edit.tsx  index.tsx
ui/src/routes/_app/enrollment/: index.tsx  new.tsx
ui/src/routes/_app/fleet/: index.tsx
ui/src/routes/_app/groups/: new.tsx
ui/src/routes/_app/groups/$group-id/: edit.tsx
ui/src/routes/_app/history/: index.tsx
ui/src/routes/_app/ops/: index.tsx
ui/src/routes/_app/ops/tier-tokens/: new.tsx
ui/src/routes/_app/rollouts/: $rollout-id.tsx  index.tsx  new.tsx
ui/src/routes/_app/secrets/: index.tsx  set.tsx
ui/src/routes/_app/tree/: index.tsx
ui/src/routes/_app/tree/layers/$layer/: edit.tsx  index.tsx
ui/src/routes/_app/tree/revisions/: $revision-id.tsx  index.tsx
