[package]
name = "device-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reeve-types = { path = "../reeve-types" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Version-pinned locally per build rules.
sha2 = "0.10"
hex = "0.4"
getrandom = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
