[package]
name = "device-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# openapi: this crate's routes are part of the served contract — their
# #[utoipa::path] annotations feed reeve-server's openapi.json (D10).
reeve-types = { path = "../reeve-types", features = ["openapi"] }
axum = { workspace = true }
utoipa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Version-pinned locally per build rules.
sha2 = "0.10"
hex = "0.4"
getrandom = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
