[package]
name = "reeve-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reeve-types = { path = "../reeve-types" }
gix = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
