[package]
name = "reeve-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reeve-types = { path = "../reeve-types" }
serde = { workspace = true }
# B3 converge: parse rendered compose.yml (service names -> env-file
# materialization) and deployment.yaml (the status contract, D2).
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
toml = "0.8"
sha2 = "0.10"
# "json" for the enroll call (C2, docs/decisions/agent.md D4 step 1).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# B2 bundle pull: unpack application/vnd.reeve.render-bundle.v1+tar+gzip
# (spec/reeve/08-packaging.md §10.2). Pure-Rust backend (musl-friendly,
# CLAUDE.md single-static-binary goal).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"

[dev-dependencies]
axum = { workspace = true }
tempfile = "3"
