[package]
name = "reeve-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Extension boundary (docs/build-charter.md CODE BOUNDARY): reeve
# extensions are whole modules under src/ext/, one cargo feature per
# extension, all default-ON. Core (poll, pull, converge, compose
# provider, status) never depends on ext items — the
# --no-default-features build is the compiler-enforced proof.
default = ["ext-secrets", "ext-channel", "ext-terminal"]
# REV-009 secrets: resolve-endpoint fetch + per-service env
# materialization (spec/reeve/10-secrets.md §12.3).
ext-secrets = []
# REV-001 persistent agent channel: outbound websocket for presence,
# nudges, and multiplexed sub-channels (spec/reeve/02-channel.md §4).
# ext-terminal (REV-002, B6) MUST depend on this feature — the
# terminal is a sub-channel consumer, never its own socket (§4.2).
ext-channel = ["dep:tokio-tungstenite", "dep:futures-util"]
# REV-002 remote terminal: PTY sessions over a rev-002/terminal
# sub-channel, enabled ONLY via desired state
# (spec/reeve/03-terminal.md §5). Depends on ext-channel per the
# extension feature graph.
ext-terminal = ["ext-channel", "dep:portable-pty"]

[dependencies]
reeve-types = { path = "../reeve-types" }
serde = { workspace = true }
# B3 converge: parse rendered compose.yml (service names -> env-file
# materialization) and deployment.yaml (the status contract, D2).
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
toml = "0.8"
sha2 = "0.10"
# "json" for the enroll call (C2, docs/decisions/agent.md D4 step 1).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# B2 bundle pull: unpack application/vnd.reeve.render-bundle.v1+tar+gzip
# (spec/reeve/08-packaging.md §10.2). Pure-Rust backend (musl-friendly,
# CLAUDE.md single-static-binary goal).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
# B5 channel (ext-channel only): outbound websocket client, rustls
# like reqwest above (musl-friendly, no openssl).
# 0.29 = the exact version axum 0.8's ws feature uses (one copy in
# the tree; the dev-dep mock server and this client stay in lockstep).
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }
# B6 terminal (ext-terminal only): portable PTY open/spawn/resize
# (spec/reeve/03-terminal.md §5.1/§5.3). Pinned exact per the build
# charter's version-pinning rule.
portable-pty = { version = "=0.9.0", optional = true }

[dev-dependencies]
# "ws" for the mock channel server in ext::channel tests (B5);
# "test-util" for paused-clock nudge/backoff timing tests.
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
