[package]
name = "reeve-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Extension boundary (docs/build-charter.md CODE BOUNDARY): whole
# modules behind cargo features, default ON; core never depends on ext
# items. ext-durability-changeset gates ONLY the seconds-RPO changeset
# CAPTURE tier (spec/reeve/07-durability.md §9.3) — the snapshot tier,
# restore, replay and verify-restore are CORE (§9.2/§9.4/§9.5), so a
# --no-default-features binary can still restore targets written by a
# changeset-enabled one.
default = ["ext-durability-changeset", "ext-secrets"]
ext-durability-changeset = []
# REV-009 secrets vault (spec/reeve/10-secrets.md, C7): AEAD-encrypted
# secrets table under the D15 keyfile, device resolve endpoint,
# operator write-only API, and the render-time per-app secrets_version
# hook. Core (--no-default-features) still builds and serves manifests
# with `secretsVersion` absent.
ext-secrets = []

[dependencies]
reeve-types = { path = "../reeve-types" }
margo-package = { path = "../margo-package" }
desired-state = { path = "../desired-state" }
revision-store = { path = "../revision-store" }
device-api = { path = "../device-api" }
axum = { workspace = true }
# "hooks" on top of the workspace pin: the changeset tier counts writer
# commits via commit_hook (spec/reeve/07-durability.md §9.3 "every N
# seconds or M commits"). Additive feature, harmless when unused.
rusqlite = { workspace = true, features = ["hooks"] }
serde = { workspace = true }
serde_json = { workspace = true }
# C7 ext-secrets: parse rendered deployment.yaml to collect
# `${secret:<name>}` parameter references (same parser family as
# reeve-agent's B4 ext/secrets.rs). Already in-tree via reeve-types.
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Version-pinned locally per build rules.
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.3"
base64 = "0.22"
tempfile = "3"
# C4 render pipeline: pack render bundles as deterministic tar.gz
# (application/vnd.reeve.render-bundle.v1+tar+gzip, spec/reeve/
# 08-packaging.md §10.2). Pure-Rust backend (musl-friendly, CLAUDE.md
# single-static-binary goal) — mirrors reeve-agent's pin.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
# C6 durability (spec/reeve/07-durability.md): object-store shipping,
# pure-Rust AEAD under the D15 keyfile, timestamped generation ids.
object_store = { workspace = true }
url = "2"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
