[package]
name = "reeve-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Extension boundary (docs/build-charter.md CODE BOUNDARY): whole
# modules behind cargo features, default ON; core never depends on ext
# items. ext-durability-changeset gates ONLY the seconds-RPO changeset
# CAPTURE tier (spec/reeve/07-durability.md §9.3) — the snapshot tier,
# restore, replay and verify-restore are CORE (§9.2/§9.4/§9.5), so a
# --no-default-features binary can still restore targets written by a
# changeset-enabled one.
default = [
    "ext-durability-changeset",
    "ext-secrets",
    "ext-channel",
    "ext-terminal",
    "ext-sse",
    "ext-rollouts",
]
ext-durability-changeset = []
# REV-009 secrets vault (spec/reeve/10-secrets.md, C7): AEAD-encrypted
# secrets table under the D15 keyfile, device resolve endpoint,
# operator write-only API, and the render-time per-app secrets_version
# hook. Core (--no-default-features) still builds and serves manifests
# with `secretsVersion` absent.
ext-secrets = []
# REV-001 persistent agent channel, server side (spec/reeve/
# 02-channel.md, C8): websocket endpoint at /api/reeve/v1/channel,
# presence-as-fact, best-effort nudges, sub-channel mux. Core builds
# keep recency-based presence and no push path.
ext-channel = ["axum/ws"]
# REV-002 remote terminal bridge (spec/reeve/03-terminal.md, C8):
# operator websocket leg + byte relay over a rev-002/terminal
# sub-channel. Rides the channel (the feature graph declares it —
# docs/build-charter.md CODE BOUNDARY "an extension MAY depend on
# another (terminal on channel)").
ext-terminal = ["ext-channel", "dep:futures-util"]
# REV-003 live status stream (spec/reeve/04-status-stream.md, C8):
# GET /api/reeve/v1/events SSE endpoint over the in-process event hub.
ext-sse = ["dep:futures-util"]
# REV-008 staged rollouts (spec/reeve/09-rollouts.md, C9): WFM-internal
# manifest-advancement engine + operator API. No agent-facing wire
# surface, so no capability advertisement. The V8 tables (including the
# core-honored device_render_targets holds) exist regardless of this
# feature.
ext-rollouts = []

[dependencies]
reeve-types = { path = "../reeve-types" }
margo-package = { path = "../margo-package" }
desired-state = { path = "../desired-state" }
revision-store = { path = "../revision-store" }
device-api = { path = "../device-api" }
axum = { workspace = true }
# "hooks" on top of the workspace pin: the changeset tier counts writer
# commits via commit_hook (spec/reeve/07-durability.md §9.3 "every N
# seconds or M commits"). Additive feature, harmless when unused.
rusqlite = { workspace = true, features = ["hooks"] }
serde = { workspace = true }
serde_json = { workspace = true }
# C7 ext-secrets: parse rendered deployment.yaml to collect
# `${secret:<name>}` parameter references (same parser family as
# reeve-agent's B4 ext/secrets.rs). Already in-tree via reeve-types.
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Version-pinned locally per build rules.
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.3"
base64 = "0.22"
tempfile = "3"
# C4 render pipeline: pack render bundles as deterministic tar.gz
# (application/vnd.reeve.render-bundle.v1+tar+gzip, spec/reeve/
# 08-packaging.md §10.2). Pure-Rust backend (musl-friendly, CLAUDE.md
# single-static-binary goal) — mirrors reeve-agent's pin.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
# C6 durability (spec/reeve/07-durability.md): object-store shipping,
# pure-Rust AEAD under the D15 keyfile, timestamped generation ids.
object_store = { workspace = true }
url = "2"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
# C8 ext-terminal / ext-sse: stream combinators (WebSocket split for
# the byte bridge's two pump tasks; unfold/chain for the SSE stream).
# Same pin family as reeve-agent's.
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# C8 tests: fake reeve-agent / operator websocket clients against the
# real listener. 0.29 = the exact version axum 0.8's ws feature uses
# (one tungstenite copy in the tree) — mirrors reeve-agent's pin.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
